--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Kacy Hulme",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "ejs": "^1.0.0"
   },
   "devDependencies": {},
   "repository": {
